fix(popup): misalignment in popup close button icon (#599)

--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -46,6 +46,10 @@ $popup-border-radius: 8px;
 
             i {
                 font-size: 21px;
+                float: right;
+                position: absolute;
+                right: 20px;
+                top: 20px;
                 cursor: pointer;
             }
 
